--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,107 @@
 .circle:hover {
   fill: cyan;
 } */
-body {
+/* body {
   background-color: grey;
+}
+#star {
+  stroke: #2196f3;
+  transition: 2s;
+  stroke-dashoffset: 50px;
+  /* зміншення чим більше значення тим повільніше */
+/* stroke-dasharray: 5px;
+  /* відстань між штучками */
+/* }
+.icon:hover #star {
+  stroke: yellow;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 0;
+} */
+.container {
+  max-width: 965px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.services {
+  padding-top: 110px;
+  padding-bottom: 120px;
+}
+.services-title {
+  font-size: 40px;
+  line-height: 1.875;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700s;
+  margin-bottom: 85px;
+}
+.services-list {
+  display: flex;
+  gap: 55px;
+}
+.service {
+  flex-basis: calc((100% - 110px) / 3);
+}
+.service-photo {
+  border: 2px solid #fed136;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  transition: 1s;
+}
+.service-icon {
+  width: 40px;
+  height: 40px;
+  fill: #fed136;
+  transition: 1s;
+}
+.service-name {
+  font-size: 18px;
+  line-height: 4.17;
+  text-align: center;
+  font-weight: 700;
+}
+.service-text {
+  text-align: center;
+}
+.service:hover .service-photo {
+  background-color: #fed136;
+}
+.service:hover .service-icon {
+  fill: #fff;
+}
+
+a {
+  display: flex;
+  align-items: center;
+}
+.icon-airplane {
+  font-size: 40px;
+  color: crimson;
+  margin-bottom: 20px;
+}
+.icon-airplane:hover {
+  font-size: 45px;
+  color: black;
+}
+.icon-album {
+  font-size: 30px;
+  color: cornflowerblue;
+  margin-bottom: 20px;
+}
+.icon-album:hover {
+  font-size: 40px;
+  color: darkcyan;
+}
+.icon-anchor {
+  font-size: 28px;
+  color: deeppink;
+  margin-bottom: 20px;
+}
+.icon-anchor:hover {
+  font-size: 50px;
+  color: dimgray;
 }
