--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,7 @@
   stroke-dashoffset: 0;
   stroke-dasharray: 0;
 } */
-.container {
+/* .container {
   max-width: 965px;
   margin: 0 auto;
   padding: 0 15px;
@@ -111,4 +111,156 @@ a {
 .icon-anchor:hover {
   font-size: 50px;
   color: dimgray;
+} */
+/* body {
+  height: 300vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header {
+  padding: 20px;
+  background-color: blue;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+}
+.container {
+  display: flex;
+  justify-content: center;
+   gap: 50px; 
+  border: 2px dashed darkblue;
+  padding: 10px;
+  max-width: 60%;
+   position: relative; 
+}
+
+.box {
+  width: 200px;
+  height: 200px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+.box:nth-child(1) {
+  background-color: teal;
+   position: fixed;
+  left: 0; 
+  position: relative;
+  left: 20px;
+  z-index: -1;
+}
+
+.box:nth-child(1):hover .label {
+  bottom: calc(100% - 40px);
+} 
+
+.box:nth-child(2) {
+  background-color: orange;
+   position: relative;
+  left: 100px; 
+
+  position: relative;
+  top: 50px;
+  left: 200px; 
+   position: absolute;
+  коли абсолют втрачається блокові властивості
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+
+.box:nth-child(3) {
+  background-color: palevioletred;
+  position: relative;
+  left: -20px;
+  z-index: 2;
+}
+.label {
+  padding: 10px;
+  background-color: forestgreen;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}  */
+.container {
+  max-width: 1335px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.portfolio {
+  padding-bottom: 35px;
+}
+.project {
+  position: relative;
+}
+.portfolio-item {
+  flex-basis: calc((100% - 70px) / 3);
+}
+.project-status {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 1;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: black;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.project-title {
+  font-weight: 400;
+  line-height: 1;
+  font-size: 26px;
+  text-transform: capitalize;
+  text-align: center;
+  color: #fff;
+  background-color: black;
+  padding-top: 15px;
+  padding-bottom: 25px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 91.8%;
+  z-index: 3;
+}
+.project-description {
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 3;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  background-color: chocolate;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 102px;
+  z-index: 2;
+}
+.portfolio-list {
+  display: flex;
+  gap: 35px;
+}
+.portfolio-list::after {
+  content: "";
+  width: 11px;
+  height: 11px;
+  background-color: black;
+  position: absolute;
+  left: 50%;
+  bottom: -62px;
+  transform: translate(-50%, -50%);
 }
