--- a/src/css/style.css
+++ b/src/css/style.css
@@ -309,3 +309,101 @@ a {
   box-shadow: 2px 2px 2px 2px grey;
   transform: rotateX(120deg);
 } */
+
+/* .btn {
+  position: relative;
+  display: inline-flex;
+  border: none;
+  margin: 0;
+  padding: 10px 30px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: #008080;
+  cursor: pointer;
+  font: inherit;
+}
+.btn::before,
+.btn::after {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 10px;
+  height: 20px;
+  width: 20px;
+  transition: opacity 0.5s ease;
+}
+.btn::before {
+  background: url(../img/bird.webp);
+  background-size: cover;
+}
+.btn::after {
+  background: url(../img/cat.webp);
+  background-size: cover;
+  opacity: 0;
+}
+.btn:hover {
+  background-color: coral;
+}
+.btn:hover::after {
+  opacity: 1;
+}
+.btn:hover::before {
+  opacity: 0;
+} */
+/* .menu {
+  display: flex;
+  gap: 10px;
+}
+.menu-link {
+  border: 1px solid black;
+  padding: 10px 30px;
+  position: relative;
+}
+.menu-link::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: red;
+  position: absolute;
+  left: 0;
+  top: 40px;
+  opacity: 0;
+  transform: scaleX(0) translateY(10px);
+  transition-duration: 0.5s;
+}
+.menu-link:hover::after {
+  opacity: 1;
+  transform: scaleX(1) translateY(0);
+} */
+.apple {
+  width: 320px;
+  border: 1px solid black;
+}
+.apple-photo {
+  margin-bottom: 5px;
+  width: 320px;
+  position: relative;
+  overflow: hidden;
+}
+.apple-title {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+.apple-status {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(210, 105, 30, 0.445);
+  transform: translate(-100%);
+  transition-property: transform;
+  transition-duration: 1s;
+}
+.apple-photo:hover .overlay {
+  transform: translate(0);
+}
