--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -138,37 +138,88 @@
 //   }
 // }
 // $colors: tomato, skyblue, teal, red, gold;
-body {
-  font-size: 16px;
-}
-.container {
-  min-width: 320px;
-  max-width: 1600px;
-  margin: 0 auto;
-}
-.list {
-  padding: 20px 0;
-  column-gap: 50px;
-  row-gap: 100px;
-  background-color: rgb(123, 123, 216);
+// body {
+//   font-size: 16px;
+// }
+// .container {
+//   min-width: 320px;
+//   max-width: 1600px;
+//   margin: 0 auto;
+// }
+// .list {
+//   padding: 20px 0;
+//   column-gap: 50px;
+//   row-gap: 100px;
+//   background-color: rgb(123, 123, 216);
 
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.link {
-  color: #333;
-  font-size: 2.5em;
-}
-@media (max-width: 468px), (min-width: 1200px) {
-  .list {
-    flex-direction: column;
-    align-items: center;
-    row-gap: 30px;
-    padding: 50px 0;
-  }
-  .link {
-    font-size: 3em;
-  }
-}
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+// }
+// .link {
+//   color: #333;
+//   font-size: 2.5em;
+// }
+// @media (max-width: 468px), (min-width: 1200px) {
+//   .list {
+//     flex-direction: column;
+//     align-items: center;
+//     row-gap: 30px;
+//     padding: 50px 0;
+//   }
+//   .link {
+//     font-size: 3em;
+//   }
+// }
+// --------------------------------одна варіація мобільного menu--
+// .header__container {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
+// .nav {
+//   display: none;
+// }
+// .header__menu-toggle {
+//   display: none;
+// }
+// .header__menu {
+//   order: 1;
+// }
+// // .header__menu-toggle {
+// //   appearance: none;
+// //   background-color: brown;
+// //   width: 20px;
+// //   height: 20px;
+// // }
+// .header__menu-toggle:checked ~ .nav {
+//   display: flex;
+//   position: absolute;
+//   width: 100%;
+//   left: 0;
+
+//   justify-content: center;
+//   align-items: center;
+// }
+// .header__menu-toggle:checked ~ .nav .nav__list {
+//   padding-top: 50px;
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   gap: 25px;
+//   background-color: crimson;
+// }
+
+// @media (min-width: 678px) {
+//   .nav {
+//     display: block;
+//   }
+//   .header__menu {
+//     display: none;
+//   }
+// }
