--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,3 +25,23 @@ ul {
 button {
   border: none;
 }
+
+img {
+  height: auto;
+  display: block;
+  max-width: 100%;
+  width: 100%;
+}
+
+.photo {
+  max-width: 370px;
+  height: 294px;
+  background-image: url(../img/tablet.jpg);
+  background-size: cover;
+}
+
+@media (min-width: 768px) {
+  .photo {
+    background-image: url(../img/tablet.jpg);
+  }
+}
